- JVM 优化示例